idf_component_register(
    SRCS
        "main.c"
        "gfx.c"
        "font5x7.c"
        "display.c"
        "touch.c"
        "wifi.c"
        "adsb.c"
        "radar.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        driver
        esp_lcd
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        esp_http_client
        esp-tls
        mbedtls
        json
        esp_timer
)
